improve table reference

--- a/_articles/RJ-2023-071/RJ-2023-071.Rmd
+++ b/_articles/RJ-2023-071/RJ-2023-071.Rmd
@@ -1226,12 +1226,12 @@ The functions `palette.colors()` and `hcl.colors()`, from the
 palettes based on a number of widely used graphics systems.
 There are qualitative palettes for use with categorical data
 and sequential and diverging palettes for use with ordinal or continuous data. 
-The table below summarizes the main types of palettes and provides
+Table \@ref(tab:overview) below summarizes the main types of palettes and provides
 suggestions for good default palettes for each type.
 We encourage package authors to make use of these palettes
 when providing default colors for functions that produce plots.
 
-: An overview of the new palette functionality:  For each main type of palette, the _Purpose_ row describes what sort of data the type of palette is appropriate for, the _Generate_ row gives the functions that can be used to generate palettes of that type, the _List_ row names the functions that can be used to list available palettes, and the _Robust_ row identifies two or three good default palettes of that type. 
+Table: (\#tab:overview) An overview of the new palette functionality:  For each main type of palette, the _Purpose_ row describes what sort of data the type of palette is appropriate for, the _Generate_ row gives the functions that can be used to generate palettes of that type, the _List_ row names the functions that can be used to list available palettes, and the _Robust_ row identifies two or three good default palettes of that type. 
 
 +----------+---------------------------------------+-------------------------------------+-----------------------------------------------+
 |          | Qualitative                           | Sequential                          | Diverging                                     |
