--- a/_articles/RJ-2023-073/RJ-2023-073.Rmd
+++ b/_articles/RJ-2023-073/RJ-2023-073.Rmd
@@ -1,5 +1,5 @@
 ---
-title: '`mathml`: Translate R Expressions to MathML and LaTeX'
+title: 'mathml: Translate R Expressions to MathML and LaTeX'
 abstract: This R package translates R objects to suitable elements in MathML or LaTeX,
   thereby allowing for a pretty mathematical representation of R objects and functions
   in data analyses, scientific reports and interactive web content. In the R Markdown
@@ -54,17 +54,20 @@ output:
     legacy_pdf: yes
 
 ---
+```{r eval=knitr::is_html_output(), echo=FALSE, results="asis"}
+cat("$\\require{cancel}$")
+```
 
 # Introduction
 
-The R extension of the markdown language (Xie, Allaire, and Grolemund
-2018; Allaire et al. 2023) enables reproducible statistical reports with
+The R extension of the markdown language [@Xie2018;@rmarkdown]
+enables reproducible statistical reports with
 nice typesetting in HTML, Microsoft Word, and LaTeX. Moreover, since
-recently (R Core Team 2022, version 4.2), Rs manual pages include
-support for mathematical expressions (Sarkar and Hornik 2022;
-Viechtbauer 2022), which is already a big improvement. However, except
-for special cases such as regression models (Anderson, Heiss, and
-Sumners 2023) and R's own plotmath annotation, rules for the mapping of
+recently [@R, version 4.2], Rs manual pages include
+support for mathematical expressions [@Sarkar2022;@Viechtbauer2022],
+which is already a big improvement. However, except
+for special cases such as regression models [@equatiomatic]
+and R's own plotmath annotation, rules for the mapping of
 built-in language elements to their mathematical representation are
 still lacking. So far, R expressions such as `pbinom(k, N, p)` are
 printed as they are and pretty mathematical formulae such as
@@ -75,8 +78,8 @@ to read.
 
 The present R package defines a set of rules for the automatic
 translation of R expressions to mathematical output in R Markdown
-documents (Xie, Dervieux, and Riederer 2020) and Shiny Apps (Chang et
-al. 2022). The translation is done by an embedded Prolog interpreter
+documents [@Xie2020] and Shiny Apps [@Chang2022]. 
+The translation is done by an embedded Prolog interpreter
 that maps nested expressions recursively to MathML and LaTeX/MathJax,
 respectively. User-defined hooks enable extension of the set of rules,
 for example, to represent specific R elements by custom mathematical
@@ -86,8 +89,8 @@ The main feature of the package is that the same R expressions and
 equations can be used for both mathematical typesetting and
 calculations. This saves time and potentially reduces mistakes, as will
 be illustrated below. Readers should have basic knowledge of knitr and
-R Markdown to be able to follow this article (Xie 2023; Allaire et al.
-2023), while to extend and customize the package, some basic knowledge
+R Markdown to be able to follow this article [@knitr;@rmarkdown],
+while to extend and customize the package, some basic knowledge
 of Prolog is needed.
 
 The paper is organized as follows. We start with a description of the
@@ -110,7 +113,7 @@ result, this property is not transparent to the general user. There
 exists, however, a number of built-in R functions (e.g., `quote()`,
 `call()` etc.) that allow the user to create R calls which can be stored
 in regular variables and then, for example, evaluated at a later stage
-or in a specific environment (Wickham 2019). The present package
+or in a specific environment [@Wickham2019]. The present package
 includes a set of rules that translate such calls to a mathematical
 representation in MathML and LaTeX. For a first illustration of the
 mathml package, we consider the binomial probability.
@@ -128,8 +131,8 @@ short form for
     #> pbinom(k, N, p)
 
 As can be seen from the output, to the variable `term` is not assigned
-the result of the calculation, but instead an R call (see, e.g., Wickham
-2019, for details on "non-standard evaluation"), which can eventually be
+the result of the calculation, but instead an R call [see, e.g., @Wickham2019, 
+for details on "non-standard evaluation"], which can eventually be
 evaluated with `eval()`,
 
     k <- 10
@@ -158,8 +161,8 @@ are necessary in edge cases. The package also includes a function
 `mathout()` that wraps a call to `mathml()` for HTML output and
 `mathjax()` for LaTeX output. Moreover, the function `math(x)` adds the
 class `"math"` to its argument, such that a special knitr printing
-function is invoked (see the vignette on custom print methods in Xie
-2023). An R Markdown code chunk with `mathout(term)` thus produces:
+function is invoked [see the vignette on custom print methods in @knitr]. 
+An R Markdown code chunk with `mathout(term)` thus produces:
 
 ${P}_{\mathrm{Bi}}{\left({{X}{\le}{k}}{{;}{{N}{{,}{p}}}}\right)}$
 
@@ -169,7 +172,7 @@ ${P}_{\mathrm{Bi}}{\left({{X}{\le}{k}}{{;}{{N}{{,}{p}}}}\right)}$.
 # Package mathml in practice {#package-in-practice}
 
 The currently supported R objects are listed below, roughly following
-the order proposed by Murrell and Ihaka (2000).
+the order proposed by Murrell and Ihaka [-@murrell2000].
 
 ::: {#basic-elements}
 ## Basic elements
@@ -203,9 +206,6 @@ package for convenience and points to the identity function.
 ## Decorations
 :::
 
-```{r eval=knitr::is_html_output(), echo=FALSE, results="asis"}
-cat("$\\require{cancel}$")
-```
 The package offers some support for different fonts as well as accents
 and boxes etc. Internally, these decorations are implemented as identity
 functions, so that they can be introduced into R expressions without
@@ -294,7 +294,7 @@ correct operator precedence.
 More operators are shown in Table
 [1](#tab:custom-operators){reference-type="ref"
 reference="tab:custom-operators"}, including the suggestions by Murrell
-and Ihaka (2000) for graphical annotations and arrows in R figures.
+and Ihaka [-@murrell2000] for graphical annotations and arrows in R figures.
 
 ::: {#tab:custom-operators}
   Operator    Output                            Operator          Output                            Operator        Arrow
@@ -314,26 +314,6 @@ and Ihaka (2000) for graphical annotations and arrows in R figures.
   : Custom operators in mathml
 :::
 
-::: {#builtin-functions}
-## Builtin functions
-:::
-
-There is support for most functions from package `base`, with adequate
-use and omission of parentheses.
-
-    term <- quote(sin(x) + sin(x)^2L + cos(pi/2L) + tan(2L*pi) * expm1(x))
-    math(term)
-
-${{{\sin{x}}{+}{{\left(\sin{x}\right)}^{2}}}{+}{\cos{\left({\pi}{/}{2}\right)}}}{+}{{\tan{\left({2}{{}}{\pi}\right)}}{\cdot}{\left({\exp{x}}{-}{1}\right)}}$
-
-    term <- quote(choose(N, k) + abs(x) + sqrt(x) + floor(x) + exp(frac(x, y)))
-    math(term)
-
-${{{{\binom{N}{k}}{+}{{\left\vert{x}\right\vert}}}{+}{\sqrt{x}}}{+}{\lfloor{x}\rfloor}}{+}{\exp{\left(\frac{x}{y}\right)}}$
-
-A few more examples are shown in Table
-[2](#tab:base-stats){reference-type="ref" reference="tab:base-stats"},
-including functions from `stats`.
 
 ::: {#tab:base-stats}
   Function        Output                                   Function                 Output
@@ -358,15 +338,36 @@ including functions from `stats`.
   : R functions from base and stats
 :::
 
+::: {#builtin-functions}
+## Builtin functions
+:::
+
+There is support for most functions from package `base`, with adequate
+use and omission of parentheses.
+
+    term <- quote(sin(x) + sin(x)^2L + cos(pi/2L) + tan(2L*pi) * expm1(x))
+    math(term)
+
+${{{\sin{x}}{+}{{\left(\sin{x}\right)}^{2}}}{+}{\cos{\left({\pi}{/}{2}\right)}}}{+}{{\tan{\left({2}{{}}{\pi}\right)}}{\cdot}{\left({\exp{x}}{-}{1}\right)}}$
+
+    term <- quote(choose(N, k) + abs(x) + sqrt(x) + floor(x) + exp(frac(x, y)))
+    math(term)
+
+${{{{\binom{N}{k}}{+}{{\left\vert{x}\right\vert}}}{+}{\sqrt{x}}}{+}{\lfloor{x}\rfloor}}{+}{\exp{\left(\frac{x}{y}\right)}}$
+
+A few more examples are shown in Table
+[2](#tab:base-stats){reference-type="ref" reference="tab:base-stats"},
+including functions from `stats`.
+
 ::: {#custom-functions}
 ## Custom functions
 :::
 
-For self-written functions, the matter is somewhat more complicated. For
-a function such as `g <- function(...) ...`, the name *g* is not
-transparent to R, because only the function body is represented. We can
-still display functions in the form `head(x) = body` if we embed the
-object to be shown into a call `"<-"(head, body)`.
+For self-written functions, the matter is somewhat more complicated. For 
+instance, if we consider a function such as `g <- function(...) ...`, 
+the name *g* is not transparent to R, because only the function body 
+is represented. We can still display functions in the form `head(x) = body` 
+if we embed the object to be shown into a call `"<-"(head, body)`.
 
     sgn <- function(x)
     {
@@ -433,11 +434,11 @@ that calls R from Prolog. This predicate is used to evaluate
 `formalArgs(args(sin))` and returns the names of the arguments of
 `sin()`, namely, *x*.
 
-Note that in the example above, the quoted term is an abbreviation for
-`call("integrate", quote(sin), ...)`, with `sin` being an R symbol, not
-a function. While the R function `integrate()` can handle both symbols
-and functions, mathml needs the symbol because it is unable to determine
-the function name of custom functions.
+Above, the quoted term is an abbreviation for `call("integrate", quote(sin), ...)`, 
+with `sin` being an R symbol, not a function. While the R function 
+`integrate()` can handle both symbols and functions, mathml needs the 
+symbol because it is unable to determine the function name of custom 
+functions.
 
 ::: {#names-and-order-of-arguments}
 ## Names and order of arguments
@@ -587,7 +588,7 @@ $\displaystyle{\frac{{\overline{D}}{{\,}{\cancel{{-}{{\,}{{\mu}_{0}}}}}}}{{s}{/}
 $\displaystyle{\frac{{\overline{D}}{{\,}{\boxed{{-}{{\,}{{\mu}_{0}}}}}}}{{s}{/}{\sqrt{N}}}}$
 
 The R function `omit_right(a + b)` uses non-standard evaluation
-techniques (e.g., Wickham 2019) to return only the left part an
+techniques [e.g., @Wickham2019] to return only the left part an
 operation, and cancels the right part. This may not always be desired,
 for example, when illustrating how to fix the mistake.
 
@@ -614,18 +615,18 @@ render such erroneous expressions using the flag `error` which can be
 
 # A case study
 
-This case study describes a model by Schwarz (1994) from mathematical
-psychology using the features of package mathml. Schwarz (1994) presents
+This case study describes a model by Schwarz [-@schwarz1994] from mathematical
+psychology using the features of package mathml. Schwarz [-@schwarz1994] presents
 a new explanation of redundancy gains that occur when observers respond
 to stimuli of different sources, and the same information is presented
-on two or more channels. In Schwarz's (1994) model, decision-making
+on two or more channels. In Schwarz's [-@schwarz1994] model, decision-making
 builds on a process of noisy accumulation of information over time
-(e.g., Ratcliff et al. 2016). In redundant stimuli, the model assumes a
+[e.g., @ratcliff2016]. In redundant stimuli, the model assumes a
 superposition of channel-specific diffusion processes that eventually
 reach an absorbing barrier to elicit the response. For a detailed
 description the reader may refer to the original article.
 
-Schwarz's (1994) model refers to two stimuli A and B, presented either
+Schwarz's [-@schwarz1994] model refers to two stimuli A and B, presented either
 alone or in combination (AB, redundant stimuli), with the redundant
 stimuli being presented either simultaneously or with onset asynchrony
 $\tau$. The channel activation is described as a two-dimensional Wiener
@@ -669,7 +670,7 @@ first-passage time, we have
 
 ${E{\left({D}_{\mathrm{AB}}\right)}}{=}{E{\left({D}{;}{{{\mu}_{\mathrm{A}}}{+}{{\mu}_{\mathrm{B}}}}\right)}}$
 
-For asynchronous stimuli, Schwarz (1994) derived the expected
+For asynchronous stimuli, Schwarz [-@schwarz1994] derived the expected
 first-passage time as a function of the stimulus onset asynchrony
 $\tau$,
 
@@ -716,8 +717,8 @@ Correspondingly, the expected response time amounts to
 
 ${E{\left({T}_{\tau}\right)}}{=}{{E{\left({{D}_{\tau}}{;}{{{\mu}_{\mathrm{A}}}{{,}{{\sigma}_{\mathrm{A}}}{{,}{{\mu}_{\mathrm{B}}}{{,}{{\sigma}_{\mathrm{B}}}}}}}\right)}}{+}{{\mu}_{\mathrm{M}}}}$
 
-Schwarz (1994) applied the model to data from a redundant signals task
-(Miller 1986) with 13 onset asynchronies
+Schwarz [-@schwarz1994] applied the model to data from a redundant signals task
+[@miller] with 13 onset asynchronies
 $0, \pm33, \pm67, \pm100, \pm133, \pm167, \pm\infty$ ms, where
 $\tau = 0$ refers to the synchronous condition, and $\pm\infty$ to the
 single-target presentations. Each condition was replicated 400 times.
@@ -789,6 +790,12 @@ The best fitting parameter values and their confidence intervals are
 given in Table [5](#tab:params){reference-type="ref"
 reference="tab:params"}.
 
+The goodness-of-fit statistic indicates some lack of fit,
+$X^2(8\ \mathrm{df}) = 28.34,  p = 0.0004$. Given the large trial
+numbers in the original study, this is not an unexpected result. For
+more detail, especially on fitting the observed standard deviations, the
+reader is referred to the original paper [@schwarz1994].
+
 ::: {#tab:params}
   Parameter                 Estimate   CI
   ------------------------- ---------- --------------------------------------
@@ -801,17 +808,12 @@ reference="tab:params"}.
   : Model fit
 :::
 
-The goodness-of-fit statistic indicates some lack of fit,
-$X^2(8\ \mathrm{df}) = 28.34,  p = 0.0004$. Given the large trial
-numbers in the original study, this is not an unexpected result. For
-more detail, especially on fitting the observed standard deviations, the
-reader is referred to the original paper (Schwarz 1994).
 
 # Conclusion
 
 This package allows R to render its terms in pretty mathematical
 equations. It extends the current features of R and existing packages
-for displaying mathematical formulas in R (Murrell and Ihaka 2000), but
+for displaying mathematical formulas in R [@murrell2000], but
 most importantly, mathml bridges the gap between computational needs,
 presentation of results, and their reproducibility. The package supports
 both MathML and LaTeX/MathJax for use in R Markdown documents,
@@ -826,9 +828,9 @@ regarding reproducibility of research.
 
 Furthermore, the package may also allow for a better detection of
 possible mistakes in R programs. Similar to most programming languages
-(Green 1977), R code is notoriously hard to read, and the poor
+[@green1977], R code is notoriously hard to read, and the poor
 legibility of the language is one of the main sources of mistakes. For
-illustration, we consider again Equation 10 in Schwarz (1994).
+illustration, we consider again Equation 10 in Schwarz [-@schwarz1994].
 
     f1 <- function(tau)
     { dfrac(c, mu_A) + (dfrac(1L, mu_A) - dfrac(1L, mu_A + mu_B) * 
@@ -866,14 +868,14 @@ in programming.
 One limitation of the package is the lack of a convenient way to insert
 line breaks. This is mostly due to lacking support by MathML and LaTeX
 renderers. For example, in its current stage, the LaTeX package breqn
-(Robertson et al. 2021) is mostly a proof of concept. Moreover, mathml
+[@breqn] is mostly a proof of concept. Moreover, mathml
 only works in one direction, that is, it is not possible to translate
-from LaTeX or HTML back to R (see Capretto 2023, for an example).
+from LaTeX or HTML back to R [see @latex2r, for an example].
 
 The package mathml is available for R version 4.2 and later, and can be
 easily installed using the usual `install.packages("mathml")`. At its
 present stage, it supports output in HTML, LaTeX, and Microsoft Word
-(via pandoc, MacFarlane 2022). The source code of the package is found
+[via pandoc, @pandoc]. The source code of the package is found
 at <https://github.com/mgondan/mathml>.
 
 # Appendix: Customizing the package
@@ -884,12 +886,12 @@ at <https://github.com/mgondan/mathml>.
 
 For convenience, the translation of the R expressions is achieved
 through a Prolog interpreter provided by another R package
-[rolog](https://CRAN.R-project.org/package=rolog) (Gondan 2022). If a
-version of SWI-Prolog (Wielemaker et al. 2012) is found on the system,
+[rolog](https://CRAN.R-project.org/package=rolog) [@rolog]. If a
+version of SWI-Prolog [@swipl] is found on the system,
 [rolog](https://CRAN.R-project.org/package=rolog) connects to it.
 Alternatively, the SWI-Prolog runtime libraries can be conveniently
 accessed by installing the R package
-[rswipl](https://CRAN.R-project.org/package=rswipl) (Gondan 2023).
+[rswipl](https://CRAN.R-project.org/package=rswipl) [@rswipl].
 Prolog is a classical logic programming language with many applications
 in expert systems, computer linguistics and symbolic artificial
 intelligence. The strength of Prolog lies in its concise representation
@@ -897,8 +899,8 @@ of facts and rules for knowledge and grammar, as well as its efficient
 built-in search engine for closed world domains. Whereas Prolog is weak
 in statistical computation, but strong in symbolic manipulation, the
 converse may be said for the R language. rolog bridges this gap by
-providing an interface to a SWI-Prolog distribution (Wielemaker et al.
-2012) in R. The communication between the two systems is mainly in the
+providing an interface to a SWI-Prolog distribution [@swipl] 
+in R. The communication between the two systems is mainly in the
 form of queries from R to Prolog, but two Prolog functions allow ring
 back and evaluation of terms in R.
 
@@ -950,8 +952,8 @@ LaTeX terms.
 :::
 
 To render the model equation of a linear model such as
-`lm(EOT ~ T0 + Therapy, data=d)` in mathematical form (see also
-Anderson, Heiss, and Sumners 2023), it is sufficient to map the
+`lm(EOT ~ T0 + Therapy, data=d)` in mathematical form [see also @equatiomatic], 
+it is sufficient to map the
 `Formula` in `lm(Formula, Data)` to its respective equation. This can be
 done in two ways, using either the hooks described above, or a new
 `math/2` macro at the Prolog end.
@@ -983,6 +985,9 @@ The predicate `summands/2` unpacks an expression `A + B + C` to a list
 
 ${EOT}{=}{{{{b}_{0}}{+}{{{{b}_{T0}}{{}}{T0}}{+}{{{b}_{Therapy}}{{}}{Therapy}}}}{+}{\epsilon}}$
 
+See the section above on short mathematical names for replacing 
+lengthy R labels.
+
 ::: {#n-th-root}
 ## $n$-th root
 :::
@@ -996,8 +1001,8 @@ still not match everyone's taste. Here we describe the steps needed to
 represent the $n$-th root as $\sqrt[n]x$.
 
 We assume that `nthroot(x, n)` is available in the current namespace
-(manually defined, or from R package
-[pracma](https://CRAN.R-project.org/package=pracma), Borchers 2022), so
+[manually defined, or from R package
+[pracma](https://CRAN.R-project.org/package=pracma), @pracma], so
 that the names of the arguments and their order are accessible to
 `canonical()` if needed. As we can see below, mathml uses a default
 representation `name(arguments)` for such unknown functions.
@@ -1056,82 +1061,3 @@ numerator are not detected.
 
 Supported by the Erasmus+ program of the European Commission
 (2019-1-EE01-KA203-051708).
-
-# References {#references .unnumbered}
-
-::: {#refs}
-:::
-
-Allaire, J. J., Y. Xie, C. Dervieux, J. McPherson, J. Luraschi, K.
-Ushey, A. Atkins, et al. 2023. *Rmarkdown: Dynamic Documents for R*.
-<https://github.com/rstudio/rmarkdown>.
-
-Anderson, D., A. Heiss, and J. Sumners. 2023. *Equatiomatic: Transform
-Models into 'LaTeX' Equations*.
-
-Borchers, H. W. 2022. *pracma: Practical Numerical Math Functions*.
-<https://CRAN.R-project.org/package=pracma>.
-
-Capretto, T. 2023. *latex2r: Translate Latex Formulas to R Code*.
-<https://github.com/tomicapretto/latex2r>.
-
-Chang, W., J. Cheng, J. J. Allaire, C. Sievert, B. Schloerke, Y. Xie, J.
-Allen, J. McPherson, A. Dipert, and B. Borges. 2022. *Shiny: Web
-Application Framework for R*.
-<https://CRAN.R-project.org/package=shiny>.
-
-Gondan, M. 2022. *rolog: Query SWI-Prolog from R*.
-<https://github.com/mgondan/rolog>.
-
----------. 2023. *rswipl: Embed SWI-Prolog*.
-<https://CRAN.R-project.org/package=rswipl>.
-
-Green, T. R. G. 1977. "Conditional Program Statements and Their
-Comprehensibility to Professional Programmers." *Journal of Occupational
-Psychology* 50: 93--109.
-
-MacFarlane, J. 2022. *Pandoc: A Universal Document Converter*.
-
-Miller, J. O. 1986. "Timecourse of Coactivation in Bimodal Divided
-Attention." *Perception & Psychophysics* 40: 331--43.
-
-Murrell, P., and R. Ihaka. 2000. "An Approach to Providing Mathematical
-Annotation in Plots." *Journal of Computational and Graphical
-Statistics* 9: 582--99.
-
-R Core Team. 2022. *R: A Language and Environment for Statistical
-Computing*. Vienna, Austria: R Foundation for Statistical Computing.
-<https://www.R-project.org/>.
-
-Ratcliff, R., P. L. Smith, S. D. Brown, and G. McKoon. 2016. "Diffusion
-Decision Model: Current Issues and History." *Trends in Cognitive
-Sciences* 20: 260--81.
-
-Robertson, W., J. Wright, F. Mittelbach, and U. Fischer. 2021. *Breqn:
-Automatic Line Breaking of Displayed Equations*.
-<https://www.ctan.org/pkg/breqn>.
-
-Sarkar, D., and K. Hornik. 2022. *Enhancements to HTML Documentation*.
-<https://blog.r-project.org/2022/04/08/enhancements-to-html-documentation/index.html>.
-
-Schwarz, W. 1994. "Diffusion, Superposition, and the Redundant-Targets
-Effect." *Journal of Mathematical Psychology* 38: 504--20.
-
-Viechtbauer, W. 2022. *mathjaxr: Using 'Mathjax' in Rd Files*.
-<https://CRAN.R-project.org/package=mathjaxr>.
-
-Wickham, H. 2019. *Advanced R*. Cambridge: Chapman; Hall/CRC.
-
-Wielemaker, J., T. Schrijvers, M. Triska, and T. Lager. 2012.
-"SWI-Prolog." *Theory and Practice of Logic Programming* 12 (1-2):
-67--96.
-
-Xie, Y. 2023. *knitr: A General-Purpose Package for Dynamic Report
-Generation in R*. <https://yihui.org/knitr/>.
-
-Xie, Y., J. J. Allaire, and G. Grolemund. 2018. *R Markdown: The
-Definitive Guide*. Boca Raton, Florida: Chapman; Hall/CRC.
-<https://bookdown.org/yihui/rmarkdown>.
-
-Xie, Y., C. Dervieux, and E. Riederer. 2020. *R Markdown Cookbook*.
-Cambridge: Chapman; Hall/CRC.
