--- a/_articles/RJ-2023-062/RJ-2023-062.Rmd
+++ b/_articles/RJ-2023-062/RJ-2023-062.Rmd
@@ -1,11 +1,11 @@
 ---
-title: 'C443: An R-package to see a forest for the trees'
+title: 'C443: An R package to See a Forest for the Trees'
 abstract: Classification trees, well-known for their ease of interpretation, are a
   widely used tool to solve statistical learning problems. However, researchers often
   end up with a forest rather than an individual classification tree, which implies
   a major cost due to the loss of the transparency of individual trees. Therefore,
   an important challenge is to enjoy the benefits of forests without paying this cost.
-  In this paper, we propose the R-package C443. The C443 methodology simplifies a
+  In this paper, we propose the R package C443. The C443 methodology simplifies a
   forest into one or a few condensed summary trees, to gain insight into its central
   tendency and heterogeneity. This is done by clustering the trees in the forest based
   on similarities between them, and on post-processing the clustering output. We will
